src/objects/Calendar_View__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Day_List_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Day List View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Day_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Day View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Month View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Week_List_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Week List View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Week_View__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Week View</label>
        <type>Checkbox</type>
    </fields>
    <label>Calendar View</label>
</CustomObject>